<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333366"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="42dp"
        android:text="@string/topicsort"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#cccc00" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_toRightOf="@+id/button_bubble"
        android:text="@string/back" />

    <Button
        android:id="@+id/button_insertion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="20dp"
        android:text="@string/insert"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/button_insertion"
        android:layout_marginLeft="37dp"
        android:text="@string/select"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button_heap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/button_insertion"
        android:layout_below="@+id/button_selection"
        android:layout_marginLeft="37dp"
        android:text="@string/heap"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button_merge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/button_heap"
        android:layout_below="@+id/button_heap"
        android:layout_marginLeft="37dp"
        android:text="@string/merge"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button_bubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/button_merge"
        android:layout_below="@+id/button_merge"
        android:layout_marginLeft="37dp"
        android:text="@string/buble"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button_quick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/button_bubble"
        android:layout_below="@+id/button_bubble"
        android:layout_marginLeft="37dp"
        android:text="@string/quick"
        android:textColor="#000000" />

</RelativeLayout>