<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gdrdabarera.algosns.MainActivity"
    android:background="@drawable/frontback1" >

    <Button
        android:id="@+id/button_exitf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="17dp"
        android:layout_toRightOf="@+id/button_quiz"
        android:text="@string/exit" 
        android:background="#000000"
        android:textColor="@color/blue"
        android:textSize="24sp"
       />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/topic"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/darkblue"
        android:textSize="32sp" />

    <Button
        android:id="@+id/button_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_exitf"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/quiz"
        android:textColor="@color/darkpurple"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_ds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_algo"
        android:layout_centerVertical="true"
        android:text="@string/ds"
        android:textColor="@color/darkpurple"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_algo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_ds"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/algo"
        android:textColor="@color/darkpurple"
        android:textSize="30sp"
       />

</RelativeLayout>
